--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,7 +59,12 @@
   <audio data-key="KeyL" src="sounds/tink.wav"></audio>
 
 <script>
-
+ window.addEventListener('keydown', function (e) {
+  const audio = document.querySelector(`audio[data-key="${e.code}"]`);
+  if (!audio) return;
+  console.log(audio);
+  audio.play();
+ });
 </script>
 
 
