--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -61,10 +61,26 @@
 <script>
  window.addEventListener('keydown', function (e) {
   const audio = document.querySelector(`audio[data-key="${e.code}"]`);
+  const key = document.querySelector(`.key[data-key="${e.code}"]`);
   if (!audio) return;
-  console.log(audio);
+  audio.currentTime = 0;
   audio.play();
+  console.log(audio);
+  console.log(key);
+  key.classList.add('playing')
+
  });
+
+function removeTransition(e) {
+  if (e.propertyName !== 'transform') return;
+  console.log(e)
+  this.classList.remove('playing')
+
+}
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+
 </script>
 
 
