--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,7 +59,9 @@
   <audio data-key="KeyL" src="sounds/tink.wav"></audio>
 
 <script>
- window.addEventListener('keydown', function (e) {
+
+
+function playSound(e) {
   const audio = document.querySelector(`audio[data-key="${e.code}"]`);
   const key = document.querySelector(`.key[data-key="${e.code}"]`);
   if (!audio) return;
@@ -69,7 +71,8 @@
   console.log(key);
   key.classList.add('playing')
 
- });
+}
+
 
 function removeTransition(e) {
   if (e.propertyName !== 'transform') return;
@@ -77,10 +80,12 @@ function removeTransition(e) {
   this.classList.remove('playing')
 
 }
+
+
 const keys = document.querySelectorAll('.key');
 keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
-
+window.addEventListener('keydown', playSound);
 </script>
 
 
